--- a/readme.Rmd
+++ b/readme.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Community v chemistry -- Recent analyses"
+title: "Community v chemistry"
 date: "10/23/2017"
 output: github_document
 ---
@@ -9,684 +9,41 @@ output: github_document
 knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 ```
 
-```{r load}
-# load libraries and fxns
+## Overview
+This repository contains code associated with the manuscript "Initial wood trait variation overwhelms endophyte community effects for explaining decay trajectories" (in review)
 
-#libraries
-library(tidyverse) # formatting
-library(gridExtra) #plotting
-#library(litterfitter) #fit decay models to timeseries
-#library(GGally) #plotting
-#library(corrplot) #plotting
-#library(lmtest) # for coxtest()
-#library(vegan) #diversity metrics
-#library(rioja) #WA-PLS
+Author names, institutions and addresses:
+Marissa Lee 1
+Jeff R. Powell 2
+Brad Oberle 3
+Faride Unda 4
+Shawn D. Mansfield 4
+Kylie Brice 2
+Jessica Rigg 5
+*Will K. Cornwell 6
+*Amy E. Zanne 1
 
-#fxns
-source('code/helper_fxns.R')
-sourceDir('code')
+*co-senior authorship
+1 Department of Biological Sciences, The George Washington University, Washington, DC, United States
+2 Hawkesbury Institute for the Environment, University of Western Sydney, Hawkesbury, Australia
+3 Division of Natural Sciences, New College of Florida, Sarasota, FL, United States
+4 Department of Wood Science, University of British Columbia, Vancouver, Canada
+5 Elizabeth Macarthur Agricultural Institute, NSW Department of Primary Industries, Meanagle, Australia
+6 Evolution & Ecology Research Centre, School of Biological Earth and Environmental Sciences, University of New South Wales, Sydney, Australia
 
-```
 
-## Repo outline
+## Data availability
+Raw DNA sequencing data are available under NCBI BioProject ID PRJNA690172
 
-### Main analyses
+## Repository organization
+Code to address three key analyses aims are in R markdown files. A brief description of analyses and associated script are below.
 
-1. How do wood species and sizes vary in decay?
-- script: *1_decayPatterns.Rmd*
-```{r q1}
-#fxns
-# make_figs_decayPatterns.R
+1. How do decay trajectories vary between wood species and sizes? **1_decayPatterns.Rmd**
 
-# load data
-stemSamples <- load_stemSamples() # this function is in load_microbeData.R
-initial_mass <- read_in_initial_mass()
-harvest_mass <- LoadHarvestFiles()
-pmr <- Calc_massRemaining(initial_mass, harvest_mass) # calculate percent mass remaining (pmr)
-decayfits <- read_csv("derived_data/decayfits.csv") # see rmd script if need to update
-# weibull params
-# beta = scale param = higher values mean slower decay
-# alpha = scale param = higher values mean more S-shaped
+2. How do wood traits covary? **2a_woodtraits_correlated.Rmd** Do wood traits explain decay? **2b_woodtraits_explainDecay.Rmd**
 
-# plot potential weibull fits
-plot_weibull(pmr, decayfits)
+3. Summarize endophyte communities across wood species and sizes **3a_endoComp_summary.Rmd** Does endophyte community composition explain decay? **3b_endoComp_explainDecay.Rmd** Does endophyte richness explain decay? **3c_endoDiv_explainDecay.Rmd**
 
-# plot weibull vs neg exp fits
-p.a <- makefig__compare_t50_tab(decayfits) 
-p.b <- makefig__compare_t50_aic(decayfits) 
-grid.arrange(p.a + ggtitle("a"), 
-             p.b + ggtitle("b"))
+- How does including t=0 points affect the decay model fit? Including it affects the liklihood and the model selection criteria, but the curve fits are identical.  Excluding t=0 leads to prefering simpler models, which is the same effect as increasing the penalty for model complexity **code/testing_time_zero.Rmd**
 
-# plot decay fits for each species+size
-p.list <- makefig__decayfits(decayfits) 
-names(p.list)
-makefig__pmr_byStem(pmr, decayfits, param.labels = F) 
-makefig__scaleVshape(decayfits)
-
-```
-
-2. Do wood traits explain decay? 
-- script: *2_woodtraits_explainDecay.Rmd*
-```{r load_woodtraits}
-#fxns
-# make_figs_decayPatterns.R
-
-# load data
-stemSamples <- load_stemSamples() # this function is in load_microbeData.R
-initial_mass <- read_in_initial_mass()
-harvest_mass <- LoadHarvestFiles()
-pmr <- Calc_massRemaining(initial_mass, harvest_mass) # calculate percent mass remaining (pmr)
-pmr_byStem <- AvgPMR_byStem(pmr, long.form = F) # average pmr for each stem and timepoint
-stem.respVars <- list("time7", "time13", "time25", "time37","time59")
-decayfits <- read_csv("derived_data/decayfits.csv") # see 1_decayPatterns.Rmd to update
-code.respVars <- list("w.t50","beta","alpha","w.r2")
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
-trait.order <- traitcol.order()
-traitVars <- c(trait.order$phys.cols, trait.order$nutr.cols)
-traitVars.stem <- trait.order$stem.trait.cols
-traitVars.cfract <- trait.order$cfract.cols
-
-#######
-# do traits predict decayfits?
-result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, 
-                                      traits.code,
-                                      code.respVars, 
-                                      traitVars,
-                                      cfract = F) # see make_figs_woodTraits_explainDecay.R
-fig <- makefig__traits_explain_decayParams(result.list = result.traitsDecay, 
-                                           traitVars, cfract = F) 
-fig$p
-result.traitsDecay$fitstats
-
-#######
-# do traits predict PMR?
-stem.respVars %>%
-  purrr::set_names() %>%
-  map(~CreateTraitPMRpair(respVar = .x, 
-                          traits.stem, traits.code, 
-                          pmr_byStem, 
-                          traitVars.stem)) -> datasets # see make_figs_woodTraits_explainDecay.R
-result.traitsPMR <- doAnalysis_traits_explain_pmr(datasets, 
-                                      stem.respVars, traitVars.stem, 
-                                      cfract = F) # see make_figs_woodTraits_explainDecay.R
-fig <- makefig__traits_explain_pmr(result.list = result.traitsPMR, 
-                                   traitVars.stem,
-                                   cfract = F) 
-fig$p
-result.traitsPMR$fitstats
-
-
-#######
-# do Cfract predict decayfits?
-traits.code %>%
-  select(c(trait.order$id.cols, trait.order$cfract.cols, "waterperc","N","Ca")) %>%
-  filter(!is.na(Arabinose)) -> traits.code.cfract
-result.cfractDecay <- doAnalysis_traits_explain_decayParams(decayfits, 
-                                      traits.code = traits.code.cfract,
-                                      code.respVars, 
-                                      traitVars = traitVars.cfract,
-                                      cfract = T) # see make_figs_woodTraits_explainDecay.R
-fig <- makefig__traits_explain_decayParams(result.list = result.cfractDecay, 
-                                           traitVars = traitVars.cfract, 
-                                           cfract = T) 
-fig$p
-result.cfractDecay$fitstats
-
-#######
-# do Cfract predict PMR?
-traits.stem %>%
-  select(c(trait.order$id.cols, "codeStem", trait.order$cfract.cols)) %>%
-  filter(!is.na(Arabinose)) -> traits.stem.cfract
-stem.respVars %>%
-  purrr::set_names() %>%
-  map(~CreateCfractPMRpair(respVar = .x, 
-                          traits.stem.cfract, 
-                          pmr_byStem, 
-                          traitVars.cfract)) -> datasets # see make_figs_woodTraits_explainDecay.R
-result.cfractPMR <- doAnalysis_traits_explain_pmr(datasets, 
-                                      stem.respVars, 
-                                      traitVars.stem = traitVars.cfract,
-                                      cfract = T) # see make_figs_woodTraits_explainDecay.R
-fig <- makefig__traits_explain_pmr(result.list = result.cfractPMR, 
-                                   traitVars.stem = traitVars.cfract,
-                                   cfract = T) 
-fig$p
-result.cfractPMR$fitstats
-
-```
-
-3a. Does endophyte composition explain decay?
-- script: *3a_endoComp_explainDecay.Rmd*
-- summary: No. There is a relationship between composition and percent mass remaining after 37 months, but this is likely driven by the role of water content on the microbial community and decay.
-```{r load_microbes}
-#fxns
-# make_figs_endoComp_explainDecay.R
-
-# load data
-stemSamples <- load_stemSamples() # this function is in load_microbeData.R
-initial_mass <- read_in_initial_mass()
-harvest_mass <- LoadHarvestFiles()
-pmr <- Calc_massRemaining(initial_mass, harvest_mass) # calculate percent mass remaining (pmr)
-pmr_byStem <- AvgPMR_byStem(pmr, long.form = F) # average pmr for each stem and timepoint
-stem.respVars <- list("time7", "time13", "time25", "time37","time59")
-decayfits <- read_csv("derived_data/decayfits.csv") # see 1_decayPatterns.Rmd to update
-code.respVars <- list("w.t50","beta","alpha","w.r2")
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
-trait.order <- traitcol.order()
-traitVars <- c(trait.order$phys.cols, trait.order$nutr.cols)
-traitVars.stem <- trait.order$stem.trait.cols
-traitVars.cfract <- trait.order$cfract.cols
-# residuals from 'woodTraits_explainDecay.Rmd'
-resids_explainDecay.list <- readRDS(file = "derived_data/resids_explainDecay_list.RData")
-# microbes
-microb.data <- load_MicrobeCollection(stemSamples)
-taxAndFunguild <- microb.data$taxAndFunguild
-comm.otu <- microb.data$comm.otu
-seqSamples <- microb.data$seqSamples
-#check for oomycetes
-colnames(comm.otu)[grep("oo", colnames(comm.otu))]
-taxAndFunguild %>%
-  filter(kingdom != "Fungi")
-
-# identify the saprotrophs
-taxAndFunguild %>%
-  filter(grepl("Sapro", Guild)) -> sapro.tax
-comm.otu.sapro <- comm.otu[, colnames(comm.otu) %in% sapro.tax$OTUId]
-dim(comm.otu.sapro) # 176 OTUs
-comm.otu.sapro.trimmed <- comm.otu.trimmed[, colnames(comm.otu.trimmed) %in% sapro.tax$OTUId]
-dim(comm.otu.sapro.trimmed) # only 11 OTUs
-
-######
-# Decay
-
-# 1. decayfits ~ community
-cvfit.results.code <- doAnalysis_endoComp_explainDecay(comm.otu, seqSamples, decayfits, code.respVars, use.cache = F, save.cache = F)
-cvfit.results.code$prettyTabs #ns
-cvfit.results.code.sapro <- doAnalysis_endoComp_explainDecay(comm.otu.sapro, seqSamples, decayfits, code.respVars, use.cache = F, save.cache = F)
-cvfit.results.code.sapro$prettyTabs #ns
-
-# 2. pmr ~ community
-cvfit.results.stem <- doAnalysis_endoComp_explainPMR(comm.otu, pmr_byStem, stem.respVars)
-cvfit.results.stem$prettyTabs # p = 0.04 for time37 full community 
-cvfit.results.stem.sapro <- doAnalysis_endoComp_explainPMR(comm.otu.sapro, pmr_byStem, stem.respVars)
-cvfit.results.stem.sapro$prettyTabs # ns
-
-######
-# Decay trait and Cfract residuals
-
-# Slice 1: Examine Cfract residuals separately
-
-# 1. decayfits trait residuals ~ community
-cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, code.respVars,traitResiduals.code = resids_explainDecay.list$traits.code, use.cache = F, save.cache = F)
-cvfit.results.code$prettyTabs #ns
-cvfit.results.code.sapro <- doAnalysis_endoComp_explainDecayResids(comm.otu.sapro, seqSamples, decayfits, code.respVars, traitResiduals.code = resids_explainDecay.list$traits.code, use.cache = F, save.cache = F)
-cvfit.results.code.sapro$prettyTabs #ns
-
-# 2. decayfits Cfract residuals ~ community
-cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, code.respVars, traitResiduals.code = resids_explainDecay.list$cfract.code, use.cache = F, save.cache = F)
-cvfit.results.code$prettyTabs #ns
-cvfit.results.code.sapro <- doAnalysis_endoComp_explainDecayResids(comm.otu.sapro, seqSamples, decayfits, code.respVars, traitResiduals.code = resids_explainDecay.list$cfract.code, use.cache = F, save.cache = F)
-cvfit.results.code.sapro$prettyTabs #ns
-
-# 3. pmr trait residuals ~ community
-cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, pmr_byStem, stem.respVars, traitResiduals.stem = resids_explainDecay.list$traits.stem)
-cvfit.results.stem$prettyTabs #ns
-cvfit.results.stem.sapro <- doAnalysis_endoComp_explainPMRResids(comm.otu.sapro, pmr_byStem, stem.respVars, traitResiduals.stem = resids_explainDecay.list$traits.stem)
-cvfit.results.stem.sapro$prettyTabs #ns
-
-
-# Slice 2: Include C fraction data (and exclude small stems)
-
-# 1. decayfits trait residuals ~ community
-cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, code.respVars, traitResiduals.code = resids_explainDecay.list$cfract.code, use.cache = F, save.cache = F)
-cvfit.results.code$prettyTabs # ns
-cvfit.results.code.sapro <- doAnalysis_endoComp_explainDecayResids(comm.otu.sapro, seqSamples, decayfits, code.respVars, traitResiduals.code = resids_explainDecay.list$cfract.code, use.cache = F, save.cache = F)
-cvfit.results.code.sapro$prettyTabs # ns
-
-# 2. pmr Cfract residuals ~ community
-cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, pmr_byStem, stem.respVars, traitResiduals.stem = resids_explainDecay.list$cfract.stem)
-cvfit.results.stem$prettyTabs # ns
-cvfit.results.stem.sapro <- doAnalysis_endoComp_explainPMRResids(comm.otu.sapro, pmr_byStem, stem.respVars, traitResiduals.stem = resids_explainDecay.list$cfract.stem)
-cvfit.results.stem.sapro$prettyTabs # p=0.06 for time59 full saprotroph community
-
-```
-
-3b. Does endophyte diversity explain decay? *
-- script: *3b_endoDiv_explainDecay.Rmd*
-*** revisit this - add bonferonni correction for multiple comparisons ***
-
-```{r load_microbesdiv}
-
-
-```
-
-
-
-### Other pieces
-
-- How does including t=0 points affect the decay model fit? Including it affects the liklihood and the model selection criteria, but the curve fits are identical.  Excluding t=0 leads to prefering simpler models, which is the same effect as increasing the penalty for model complexity -- *code/testing_time_zero.Rmd* 
-
-- Do endophyte community dissimilarities correlate with decay trajectory parameters? No relationships -- *code/initialDist_vs_decayDist_btwCode.Rmd*
-
-- Is there a relationship between the frequency of highly correlated (negative or positive) OTU pairs identified via boral and decay parameters? Nope -- *code/boralOTUpairs_vs_decay.Rmd*
-
-- Is there a relationship between initial microbial diversity WITHIN species+size categories and decay model R2? Nope -- *code/withinInitialDist_vs_decayR2.Rmd*
-
-- Exclude mycorrhizal fungi and animal-associated fungi that somehow made it into our OTU table -- *code/unexpectedTaxa.Rmd*
-
-
-### Need to continue incorporating C fract analyses into "woodTraits_explainDecay.Rmd"
-
-Check out correlations among C fractions and other traits. Exclude two samples for which there isn't waterperc data. Remember that there is no stem-level barkthick or density data for large stem samples.
-```{r}
-cfract.load<- load_Cfract()
-cfract.load %>%
-  select(-Total) -> cfract.load
-traits.stem %>%
-  left_join(cfract.load) %>%
-  filter(!is.na(Arabinose)) %>%
-  select(-c(barkthick, density)) -> traits.stem.sel
-#two samples are missing waterperc data
-traits.stem.sel %>%
-  filter(is.na(waterperc)) %>%
-  select(codeStem, waterperc) 
-#remove them
-traits.stem.sel %>%
-  filter(!is.na(waterperc)) -> traits.stem.sel
-
-#grab just the matrix of traits
-traits.stem.sel %>%
-  select(-c(species, size, code, unique, Stem)) -> matonly
-matonly.s <- scale(as.matrix(matonly[,-1]))
-
-# plot correlations
-pdf(file = "output/corplot.pdf")
-corrplot(cor(matonly.s), type = "lower")
-dev.off()
-
-```
-
-Kick out traits that are highly correlated
-- C and perc.Total.lignin are highly positive correlated (0.81); keep perc.Total.lignin
-- Glucose+Xylose and perc.Total.lignin are highly negatively correlated (-.89, -.73); keep perc.Total.lignin.
-```{r}
-#update
-traits.stem.sel %>%
-  select(-c(Glucose, Xylose, C)) -> traits.stem.sel
-traits.stem.sel %>%
-  select(-c(species, size, code, unique, Stem)) -> matonly
-matonly.s <- scale(as.matrix(matonly[,-1]))
-
-# plot correlations again
-corrplot(cor(matonly.s), type = "lower")
-
-cor(matonly.s)
-
-```
-
-Plot variation in C fractions w/in and between species
-```{r}
-
-traits.stem.sel %>%
-  select(-c(Ca, Fe, K, Mn, N, P, waterperc, Zn)) %>%
-  gather(key = "trait", value = "trait.val", -c(codeStem, species, size, code, unique, Stem)) -> tmp
-
-p <- ggplot(tmp, aes(x = reorder(species, trait.val), y = trait.val)) +
-  geom_point() +
-  facet_wrap(~trait, scales = "free_y") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-ggsave(p, filename = "output/cfract_univar.pdf")
-
-```
-
-Check out samples in trait space
-```{r}
-pca <- prcomp(matonly.s)
-df <- data.frame(pca$x[,1:2], 
-                 traits.stem.sel[,c("codeStem","species","code","size")])
-datapc <- data.frame(varnames=rownames(pca$rotation), pca$rotation[,1:2])
-mult <- min(
-  (max(df[,"PC1"]) - min(df[,"PC2"])/(max(datapc[,"PC2"])-min(datapc[,"PC2"]))),
-  (max(df[,"PC2"]) - min(df[,"PC1"])/(max(datapc[,"PC1"])-min(datapc[,"PC1"])))
-)
-datapc <- transform(datapc,
-                    v1 = .7 * mult * datapc$PC1,
-                    v2 = .7 * mult * datapc$PC2)
-  
-
-plot_12 <- ggplot(data=datapc, aes(x=v1, y=v2, label=varnames)) + 
-  geom_text(size=3, vjust=1, color=1) + 
-  geom_segment(data=datapc, aes(x=0, y=0, xend=v1, yend=v2),
-               arrow=arrow(length=unit(0.2,"cm")), alpha=0.75, color=1) + 
-  coord_fixed() +
-  geom_text(mapping=aes(x=PC1, y=PC2, 
-                        color = species, label = code), data=df, inherit.aes = FALSE) +
-  theme_bw() + xlab("PC1 (24%)") + ylab("PC2 (16%)") +
-  guides(color = F)
-plot_12
-ggsave(plot_12, filename = "output/stem_traitord.pdf")
-# for some reason this plot knit with more extra data points? it seems to work fine in ggsave
-
-summary(pca)
-```
-![](output/stem_traitord.pdf)
-
-Load new versions of trait data
-```{r}
-traits.code <- trait.means_byCode_new(stemSamples, fill.densitybark = T)
-traits.stem <- trait.means_byStem_new(stemSamples)
-
-# remove traits that are highly correlated with others
-exclude <- c("Glucose","Xylose","C")
-traits.code %>%
-  select(-exclude) -> traits.code
-traits.stem %>%
-  select(-exclude) -> traits.stem
-
-# remove observations w/o C fract data
-traits.code %>%
-  filter(!is.na(Arabinose)) -> traits.code.tmp
-traits.stem %>%
-  filter(!is.na(Arabinose)) -> traits.stem.tmp
-
-# remove density and barkthickness from stem data
-traits.stem.tmp %>%
-  select(-c("barkthick","density")) -> traits.stem.tmp
-
-```
-
-Do wood C fractions explain decay?
-
-(by code)
-Note that there are only 12 observations by code, so that limits the number of traits we can include in the model. Not including micronutrients
-
-```{r}
-#merge traits and response variables into 1 df
-decayfits %>%
-  select(code, species, size, 
-         ne.r2, k, t50, 
-         w.r2, alpha, beta, w.t50) %>%
-  left_join(traits.code) %>% 
-  filter(!is.na(P)) %>%
-  filter(!is.na(waterperc)) -> decayfits.traits
-# subset by wood fract data
-decayfits.traits %>%
-  filter(!is.na(Arabinose)) -> decayfits.traits
-
-# scale all the traits
-decayfits.traits %>%
-  select(waterperc, N, P, perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose) -> mat
-decayfits.traits %>%
-  select(-c(waterperc, N, P, perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose)) -> tmp
-decayfits.traits.s <- data.frame(tmp, scale(mat))
-
-#set up full models
-respVars <- list("k","t50","ne.r2", "alpha","beta","w.t50","w.r2")
-rhs <- "waterperc + N + P + perc.Total.lignin + Rhamnose + Arabinose + Galactose + Mannose" # got rid of size because only looking at large stems
-mod.full.list<-lapply(respVars, ModelFit_manyYs, rhs, curr.data=decayfits.traits.s) # summaryTable_fxns.R
-
-#do stepwise model selection #uncomment if data changes
-mod.select.list<-lapply(mod.full.list, function(x) {
-  x.updated<-update(x, . ~ ., data = model.frame(x))
-  mod.select<-step(x.updated, direction="backward")
-  return(mod.select)
-  })
-names(mod.select.list) <- respVars
-
-#plot
-sum.list<-lapply(mod.select.list, summary)
-coefs.df<-PullLmCoefs(sum.list, unlist(respVars))
-fitstat.df<-PullLmFitStats(sum.list, unlist(respVars))
-fitstat.df %>%
-  gather(key = "respvar", value = "value", -c(term)) %>%
-  filter(term == "r.squared") %>%
-  select(-term) %>%
-  rename('r.squared'=value) -> r2.df
-coefs.df %>%
-  left_join(r2.df) %>%
-  filter(respvar %in% c("alpha","beta","w.t50","w.r2")) -> coefs.df
-
-unique(coefs.df$term)
-# term.order <- c("(Intercept)","waterperc","N","perc.Total.lignin","Arabinose","Galactose","Mannose","Rhamnose")
-# coefs.df$term <- factor(coefs.df$term, levels = rev(term.order))
-
-coefs.df %>%
-  filter(term != "(Intercept)") -> tmp
-p <- ggplot(tmp, aes(x = est, y = term, color = stars)) +
-  geom_point() +
-  geom_errorbarh(aes(xmin = est - se, xmax = est + se)) +
-  facet_wrap(~respvar, scales = "free_x") +
-  geom_vline(xintercept = 0, linetype = 2) +
-  scale_color_manual(values = c("gray","black","blue","red")) +
-  ylab("Predictor variable") +
-  xlab("Coef. estimate (+/- SE)")
-p
-ggsave(p, filename = "output/cfract_code.pdf")
-
-```
-
-
-(by stem) -- I want to update this so that the traits values are scaled before running the models
-```{r}
-# create dataframes
-# stem-level waterperc, xrf, and CN and (small) species-level barkthickness and density
-
-respVars <- list("time7", "time13", "time25", "time37","time59")
-
-traits.stem.tmp %>%
-  filter(!is.na(P)) %>%
-  filter(!is.na(waterperc)) %>%
-  filter(!is.na(Arabinose)) -> traits.stem.tmp
-
-# scale all the traits
-traits.stem.tmp %>%
-  select(waterperc, N, P, perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose) -> mat
-traits.stem.tmp %>%
-  select(codeStem) -> tmp
-traits.stem.tmp.s <- data.frame(tmp, scale(mat[,-1]))
-traits.stem.tmp.s
-
-datasets<-lapply(respVars, function(x) {
-  result<-CreateTraitPMRpair(x, traits.stem, traits.code, pmr_byStem) #analysisDF_fxns.R
-  return(result)
-})
-names(datasets)<-respVars
-
-#set up full models
-rhs <- "waterperc + N + Arabinose + Galactose + Mannose + perc.Total.lignin + Rhamnose"
-lhs <- "curr.pmr"
-mod.full.list<-lapply(datasets, function(x) {
-  result<-ModelFit_manyYs(y=lhs, rhs=rhs, curr.data=x)
-  return(result)
-})
-
-#do stepwise model selection
-mod.select.list<-lapply(mod.full.list, function(x) {
-  x.updated<-update(x, . ~ ., data = model.frame(x))
-  mod.select<-step(x.updated, direction="backward")
-  return(mod.select)
-  })
-
-#plot
-sum.list<-lapply(mod.select.list, summary)
-coefs.df<-PullLmCoefs(sum.list, unlist(respVars))
-fitstat.df<-PullLmFitStats(sum.list, unlist(respVars))
-fitstat.df %>%
-  gather(key = "respvar", value = "value", -c(term)) %>%
-  filter(term == "r.squared") %>%
-  select(-term) %>%
-  rename('r.squared'=value) -> r2.df
-coefs.df %>%
-  left_join(r2.df) -> coefs.df
-
-coefs.df$respvar<- factor(coefs.df$respvar, levels = c("time7","time13","time25","time37","time59"))
-coefs.df
-term.order <- c("(Intercept)","waterperc","N","perc.Total.lignin","Arabinose","Galactose","Mannose","Rhamnose")
-coefs.df$term <- factor(coefs.df$term, levels = rev(term.order))
-
-coefs.df %>%
-  filter(term != "(Intercept)") -> tmp
-p.stem <- ggplot(tmp, aes(x = est, y = term, color = stars)) +
-  geom_point() +
-  geom_errorbarh(aes(xmin = est - se, xmax = est + se)) +
-  facet_grid(~respvar, scales = "free_x") +
-  geom_vline(xintercept = 0, linetype = 2) +
-  scale_color_manual(values = c("gray","black","blue","red")) +
-  ylab("Predictor variable") +
-  xlab("Coef. estimate (+/- SE)")
-p.stem
-
-ggsave(p.stem, filename = "output/cfract_stem.pdf")
-
-
-
-
-```
-
-
-Visualize the relationship between wood C fractions and endophyte communities
-```{r}
-
-#microbes
-microb.data <- load_MicrobeCollection(stemSamples)
-taxAndFunguild <- microb.data$taxAndFunguild
-comm.otu <- microb.data$comm.otu
-seqSamples <- microb.data$seqSamples
-
-cfract.load<- load_Cfract()
-mat.otu <- sub.comm.otu <- comm.otu[row.names(comm.otu) %in% cfract.load$unique,]
-dim(mat.otu)
-
-xVars <- cfract.load
-xVars %>%
-  select(-c(Total, unique, Stem, size)) -> envVars
-dim(envVars)  
-
-# transform otu tab
-mat.otu.t<-decostand(mat.otu, 'hellinger')
-  
-# unconstrained mod
-mod.obj <- capscale(mat.otu.t ~ 1, data = envVars, distance='bray')
-  
-  # do envfit
-  envfit.obj <- envfit(mod.obj, envVars)
-  
-  # collect site scores from mod.obj
-  scrs <- as.data.frame(scores(mod.obj, display = "sites"))
-  scrs
-  scrs <- cbind(scrs, seq_sampName = row.names(scrs))
-  scrs %>%
-    left_join(seqSamples) -> scrs
-  
-  # collect vector scores from envfit.obj
-  spp.scrs <- as.data.frame(scores(envfit.obj, display = "vectors"))
-  spp.scrs <- cbind(spp.scrs, Species = rownames(spp.scrs), pval = envfit.obj$vectors$pvals)
-  
-  # plot
-  mult <- 2 #multiplier for the arrows and text for envfit
-  mult.text <- 2.3
-  p <- ggplot(scrs) +
-    geom_text(mapping = aes(x = MDS1, y = MDS2, label = code,
-                             color = species), size = 3) +
-    coord_fixed() + ## need aspect ratio of 1!
-    geom_segment(data = spp.scrs,
-                 aes(x = 0, xend = mult*MDS1, y = 0, yend = mult*MDS2),
-                 arrow = arrow(length = unit(0.2, "cm")), colour = 1) +
-    geom_text(data = spp.scrs, 
-              aes(x = mult.text*MDS1, y = mult.text*MDS2, 
-                  label = Species), size = 4, fontface = "bold") +
-    xlab("PCoA 1") + ylab("PCoA 2")
-  p
-  ggsave(file="output/unconstrained_envfit.pdf", width = 8, height = 5)
-
-```
-
-Does adding C fraction data explain more variation in endophyte composition? How much? Doubles the unique info (with the caveat that I didn't include micronutrients)
-
-X1 = original trait set: waterperc, C, N, and P
-X2 = C fractions: perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose
-```{r}
-
-traits.stem <- trait.means_byStem_new(stemSamples)
-
-# remove traits that are highly correlated with others
-exclude <- c("Glucose","Xylose") # don't get rid of C
-traits.stem %>%
-  select(-exclude) -> traits.stem
-
-# remove observations w/o C fract data
-traits.stem %>%
-  filter(!is.na(Arabinose)) -> traits.stem.tmp
-
-# remove density and barkthickness from stem data
-traits.stem.tmp %>%
-  select(-c("barkthick","density")) -> traits.stem.tmp
-
-traits.stem.tmp %>%
-  filter(!is.na(P)) %>%
-  filter(!is.na(waterperc)) %>%
-  filter(!is.na(Arabinose)) -> traits.stem.tmp
-
-# scale all the traits
-traits.stem.tmp %>%
-  select(waterperc, N, P,C, perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose) -> mat
-traits.stem.tmp %>%
-  select(codeStem) -> tmp
-traits.stem.tmp.s <- data.frame(tmp, scale(mat[,-1]))
-traits.stem.tmp.s
-
-colnames(traits.stem.tmp.s)
-envVars <- traits.stem.tmp.s
-
-# remove communities with missing waterperc data
-mat.otu <- sub.comm.otu <- comm.otu[row.names(comm.otu) %in% envVars$codeStem,]
-dim(mat.otu)
-dim(envVars)
-
-# transform otu tab
-mat.otu.t<-decostand(mat.otu, 'hellinger')
-
-# extract the unconstrained and constrained mod
- # unconstrained mod
-
-mod0 <- capscale(mat.otu.t ~ 1, data = envVars[,-1], distance='bray')
-  # constrained mod
-modfull <- capscale(mat.otu.t ~ ., data=envVars[,-1], distance='bray')
-
-# model selection
-modstep <- ordistep(mod0, scope=formula(modfull))
-  
-# summary table for the best model
-df <- data.frame(term=row.names(modstep$anova), modstep$anova)
-df %>%
-    separate(term, into=c("drop","term")) %>%
-    select(-drop) %>%
-    rename('pval'=`Pr..F.`) -> df
-df
-write.csv(df, file = "output/constrained_bestmodelsummaryAllTraits.csv")
-
-envVars %>%
-  select(waterperc, N, P,C) -> orig.traits
-envVars %>%
-  select(perc.Total.lignin, Rhamnose, Arabinose, Galactose, Mannose) -> C.fract
-
-endo.var <- varpart(vegdist(mat.otu.t, distance = 'bray'),
-                        ~ as.matrix(orig.traits),
-                        ~ as.matrix(C.fract))
-    var.fract <- endo.var$part
-    plot(endo.var)
-    
-    orig.traits
-    C.fract
-
-
-
-
-
-```
-
-
-
+- Do endophyte community dissimilarities correlate strongly with decay trajectory parameters? **code/initialDist_vs_decayDist_btwCode.Rmd**
